tdf#159817 tdf#159802 Form controls coordinates wrong when export to pdf

This reverts the following commits:
d408fe5cd45c9594feecec727ab2f73c66e361d0 "unnecessary LogicToPixel in CheckBox::Draw"
7441aaa4c5b2215e369c62e22af098184e8ce807 "unnecessary LogicToPixel in RadioButton::Draw"
a2dacae0c8acfad8a5e5a16c766ee740ec202c5e "unnecessary LogicToPixel in ComboBox::Draw"
f73e8c895e24fda10931ecf344a1a0dd8bcdf92c "unnecessary LogicToPixel in TabPage::Draw"

I am fairly sure this code that I am restoring is dodgy,
and I am just papering over some other bug somewhere, but
I can't seem to see where that is.

Change-Id: I0f9088e43b0e3af74fd5ff9d297008ee23a3facb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164313
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164328